Quase acabando o Capítulo 3 (falta revisar)

--- a/template/cap-conceitos.tex
+++ b/template/cap-conceitos.tex
@@ -20,10 +20,10 @@ renderizadas em alta definição (quando há imagens). Presumidamente seria uma
 ferramenta maravilhosa para estimular o hábito da leitura em crianças e
 adolescentes.
 
-Toamdo por base a obra de \citep{Jim:06}, Ficção Interativa seria qualquer
+Tomando por base a obra de \citep{Jim:06}, Ficção Interativa seria qualquer
 história onde o leitor ou ouvinte é uma parte integrante da narrativa
 \footnote{refiro-me a um agente modificador da narrativa}. Pode ser um teatro de
-improviso, RPG's (Role Playing games), e até mesmos jogos de videigame seriam um
+improviso, RPG's (Role Playing games), e até mesmos jogos de videogame seriam um
 bom exemplo\footnote{Cabe incluir uma observação sobre o que foi dito pelo autor.
 O jogador, mesmo sendo parte da narrativa nem sempre é um agente modificador
 dentro da trama, Nesse caso, cabe questionar se jogos de videogame seriam um bom
@@ -131,7 +131,7 @@ em pessoas como Dom Woods que, impressionado com o jogo, disse:
 computador. (...) Parecia que respondia melhor ao que se escrevia, ao invés de
 fazer seus próximos movimentos, tal como um omponente silencioso. Acredito que
 tenha atraído muitos jogadores que se desligaram da ideia de jogar
-\textbf{contra} o computador. Se tratava, pois de jogar \textbf{com} a máquina.
+\textbf{contra} o computador. Tratava-se, pois, de jogar \textbf{com} a máquina.
 \end{quotation}
 
 Maravilhado com o trabalho que encontrou, Woods contata Crowther para poder
@@ -187,7 +187,7 @@ The Zork Trilogy}}.
 
 A linguagem "pai", MDL\footnote{MIT Design Language} foi criada pelo grupo do
 Laboratório de Ciência da Computação (LCS) daquela universidade, dirigida por
-outras necessidades alhias à empreitada de escreverem seus próprios jogos. Quando
+outras necessidades alheias à empreitada de escreverem seus próprios jogos. Quando
 tal ímpeto surgiu nos participantes daquele grupo, a primeira ideia foi usar
 aquela ferramenta, inspirada na linguagem LISP que eles já conheciam. Para
 economizar recursos de máquina (que já estavam rompendo a barreira do disponível
@@ -230,7 +230,7 @@ Tendo tratado da história da Ficção Interativa e das ferramentas mais conheci
 o próximo passo é tratar da linguagem escolhida para fazer a implemetação.
 
 \section{Ruby}
-\label{cap:ruby}
+\label{sec:ruby}
 
 Ruby é uma linguagem de programação orientada a objetos criada por Yukihiro
 Matsumoto em 1993. Ruby pode ser considerada como que um encontro entre Python,
@@ -274,7 +274,7 @@ esperado.
 \caption{\label{fig:rspec} Exemplo de programa e teste respectivo}
 \end{figure}
 
-Mais do que uma ferramenta de testes, RSpec também foi adotdo por mim como
+Mais do que uma ferramenta de testes, RSpec também foi adotado por mim como
 modelo de implementação para o sistema de criação de FI's. Cada elemento,
 quarto, personagem, objeto será descrito através de pares chave e valor, a serem
 embrulhadas por declarações como: \textbf{\texttt{Objeto Mesa tem ... fim}} ou
