--- a/template/monografia_template.tex
+++ b/template/monografia_template.tex
@@ -11,7 +11,7 @@
 % RevisÃ£o: Fabio Kon e Paulo Feofiloff
 
 
-\documentclass[12pt,twoside,a4paper]{book}
+\documentclass[12pt,twoside,a4paper,openany]{book}
 
 
 % ---------------------------------------------------------------------------- %
