--- a/template/cap-conceitos.tex
+++ b/template/cap-conceitos.tex
@@ -2,12 +2,12 @@
 \label{cap:main-concepts}
 
 Nesse capítulo, o objetivo é explicitar os conceitos que serão cruciais para a
-compreensão do que é dito nos demais capítulos. Como já dito, funciona como
-aquela parte do código em que se inclui as bibliotecas e demais arquivos com
-definições e módulos e classes e tudo o mais. Tratando desse trabalho, é o
-capítulo que garante que o texto estará auto contido na medida do possível, ou
-seja, qualquer um que lê-lo, compreenderá o que estiver escrito sem ter que
-pesquisar muito fora daqui.
+compreensão do que é dito nos demais capítulos. Como já dito, funciona como o
+cabeçalho de um arquivo de código em que se inclui as bibliotecas e demais
+arquivos com definições e módulos e classes e tudo o mais. Tratando desse
+trabalho, é o capítulo que garante que o texto estará auto contido na medida do
+possível, ou seja, qualquer um que lê-lo, compreenderá o que estiver escrito sem
+ter que pesquisar muito fora daqui.
 
 \section{Aventuras de texto}
 \label{sec:text-adventure}
@@ -237,19 +237,19 @@ Matsumoto em 1993. Ruby pode ser considerada como que um encontro entre Python,
 Perl e Smalltalk. Por ser uma linguagem tão versátil e permitir que o
 desenvolvedor concentre melhor suas energias em fazer o algoritmo \footnote{ao
 invés de ficar lutando contra a programação}  como disseram \citet{Rcook:09}, e
-por outros motivos, escolheu-se Ruby para o desenvolvimento.
+pelos motivos citados abaixo, escolheu-se Ruby para o desenvolvimento.
 
-Ruby apresenta uma notável facilidade em lidar com expressões regulares, fator
-de grave importância para a produção do interpretador. Além disso, programar em
-Ruby é um exercício menos cansativo do que boa parte das outras linguagens,
-muito em razão de alguns de seus métodos ou palavras chaves tornarem o texto do
-arquivo fonte mais compreensível para humanos e máquinas exercitando a sugestão
-de D. E. Knuth que recomenda que a programação deva ser feita de modo que
-humanos entendam o que se pediu da máquina. Um arquivo bem formatado em Ruby
-permite que tal recomendação seja posta em prática. Veja, na figura
-\ref{fig:ruby} um exemplo tirado do mesmo livro que foi citado no parágrafo
-acima e que serve de fonte para esse trabalho. Em caso de necessidade de uma
-consulta mais rápida, o site
+Ruby apresenta uma notável facilidade em lidar com expressões regulares e com
+texto, fator de grave importância para a produção do interpretador (coração de
+qualquer DSL). Além disso, programar em Ruby é um exercício menos cansativo do
+que com boa parte das outras linguagens, muito em razão de alguns de seus métodos
+ou palavras chaves tornarem o texto do arquivo fonte mais compreensível para
+humanos e máquinas exercitando a sugestão de D. E. Knuth que recomenda que a
+programação deva ser feita de modo que humanos entendam o que se pediu da máquina.
+Um arquivo bem formatado em Ruby permite que tal recomendação seja posta em
+prática. Veja, na figura \ref{fig:ruby} um exemplo tirado do mesmo livro que foi
+citado no parágrafo acima e que serve de fonte para esse trabalho. Em caso de
+necessidade de uma consulta mais rápida, o site
 \href{https://www.tutorialspoint.com/ruby/index.htm}{\textbf{Tutorials Point}}
 também é uma boa sugestão.
 
