--- a/template/cap-conclusoes.tex
+++ b/template/cap-conclusoes.tex
@@ -1,8 +1,15 @@
 %% ------------------------------------------------------------------------- %%
-\chapter{Conclusões}
+\chapter{Das Conclusões}
 \label{cap:conclusoes}
 
+\section{Uma história resumida desse trabalho}
+\label{sec:about-it}
 
+\section{O que aprendi com esse trabalho}
+\label{sec:lessions}
+
+\section{Legado Esperado}
+\label{sec:legacy}
 
 
 section
