--- a/template/cap-resultados.tex
+++ b/template/cap-resultados.tex
@@ -4,5 +4,9 @@
 \section{O que foi feito?}
 \label{sec:to-be-done}
 
+\subsection{Um Tutorial de RIF}
+\label{subsec:tutorial}
+
+
 \section{O que pode ser feito?}
 \label{sec:what-can-be-done}
